# learning_telemetry

./: README.md
javascript/22_metric_otlp_grpc/: README.md  app.js  instrumentation.mjs  package-lock.json  package.json
rust/: README.md
rust/01_trace_http/: README.md
rust/02_span_with_sub_spans/: README.md
rust/02_span_with_sub_spans/src/: main.rs
rust/03_follow_span_in_sub_function/: README.md
rust/11_log_vanilla/: Cargo.toml  Dockerfile
rust/11_log_vanilla/.cargo/: config.toml
rust/11_log_vanilla/src/: main.rs
rust/12_log_json_simple/: Cargo.toml  README.md  build.sh
rust/12_log_json_simple/.cargo/: config.toml
rust/12_log_json_simple/src/: main.rs
rust/15_first_otlp_log_stdout/: Cargo.toml  README.md  t.json
rust/15_first_otlp_log_stdout/.cargo/: config.toml
rust/15_first_otlp_log_stdout/src/: main.rs
rust/16_basic_log/: Cargo.toml  README.md
rust/16_basic_log/.cargo/: config.toml
rust/18_otlp_log_grpc/: Cargo.toml  README.md
rust/18_otlp_log_grpc/.cargo/: config.toml
rust/18_otlp_log_grpc/src/: main.rs
rust/21_local_scrape_metrics/: Cargo.toml  Dockerfile  README.md
rust/21_local_scrape_metrics/.cargo/: config.toml
rust/21_local_scrape_metrics/src/: main.rs
rust/22_metric_otlp_grpc/: Cargo.toml  README.md
rust/22_metric_otlp_grpc/.cargo/: config.toml
rust/22_metric_otlp_grpc/src/: main.rs
rust/23_metrics_multi_thread_otlp_grpc/: Cargo.toml  README.md  tst.sh
rust/23_metrics_multi_thread_otlp_grpc/.cargo/: config.toml
rust/23_metrics_multi_thread_otlp_grpc/src/: main.rs
