[package]
name = "first_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
opentelemetry = { version = "0.22.0", features = ["logs"] }
opentelemetry-appender-log = { version = "0.3.0", default-features = false}
opentelemetry-stdout = { version = "0.3.0", features = ["logs"] }
opentelemetry_sdk = { version = "0.22.1", features = ["logs"] }
