[package]
name = "basic_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
opentelemetry = { version = "0.24.0", features = ["logs"] }
opentelemetry-appender-log = { version = "0.5.0", default-features = false}
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry-stdout = { version = "0.5.0", features = ["logs"] }
opentelemetry_sdk = { version = "0.24.1", features = ["logs"] }
