[package]
name = "otlp_log_grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
opentelemetry = "0.31.0"
opentelemetry-appender-log = "0.31.0"
opentelemetry-log = "0.2.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
opentelemetry_sdk = "0.31.0"
opentelemetry-stdout = "0.31.0"
tokio = { version = "1.0", features = ["full"] }
