[package]
name = "first_metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
once_cell = { version = "1.19.0"}
opentelemetry = { version = "0.22.0", features = ["metrics"] }
opentelemetry-prometheus = "0.15.0"
opentelemetry_sdk = { version = "0.22.1", features = ["metrics", "tokio"] }
prometheus = "0.13.3"
tokio = { version = "1.36.0", features = ["full"] }
