[package]
name = "metrics_multi_thread_otlp_grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic", "metrics"] }
opentelemetry_sdk = "0.31.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
